--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "ts-node-dev src/server.ts",
-    "knex:migrate": "migrate:latest --knexfile knexfile.ts"
+    "knex:migrate": "knex migrate:latest --knexfile knexfile.ts"
   },
   "keywords": [],
   "author": "",
